--- a/lib/kamansky_web/live/customer_live/show.html.heex
+++ b/lib/kamansky_web/live/customer_live/show.html.heex
@@ -1,5 +1,5 @@
-<.live_component 
-  module={KamanskyWeb.Components.Header} 
+<.live_component
+  module={KamanskyWeb.Components.Header}
   id="kamansky-header"
   breadcrumbs={[{"Customer List", Routes.customer_index_path(@socket, :index, show: @customer.id)}, "Customer Information"]}
   current_user={@current_user}
@@ -10,12 +10,12 @@
   <KamanskyWeb.Components.DataTable.table rows={@data} pagination={@pagination} socket={@socket} assigns={assigns} live_action={@live_action}
     empty_message="There are no orders to display."
   >
-    <:col let={order} label="Order">
+    <:col :let={order} label="Order">
       <.link navigate={Routes.order_show_path(@socket, :show, order)}>#<%= Order.order_number(order) %></.link>
     </:col>
-    <:col let={order} label="Date">
+    <:col :let={order} label="Date">
       <time datetime={order.ordered_at}><%= formatted_date(order.ordered_at) %></time>
     </:col>
-    <:col let={order} label="total"><%= format_decimal_as_currency(Order.total_paid(order)) %></:col>
+    <:col :let={order} label="total"><%= format_decimal_as_currency(Order.total_paid(order)) %></:col>
   </KamanskyWeb.Components.DataTable.table>
 </main>
