--- a/lib/kamansky_web/live/listing_live/bid.html.heex
+++ b/lib/kamansky_web/live/listing_live/bid.html.heex
@@ -1,12 +1,12 @@
-<.live_component 
-  module={KamanskyWeb.Components.Header} 
+<.live_component
+  module={KamanskyWeb.Components.Header}
   id="kamansky-header"
   current_user={@current_user}
   live_action={@live_action}
   page_title={@page_title}
 />
 <main>
-  <KamanskyWeb.Components.Page.flash flash={live_flash(@flash, :info)} />
+  <KamanskyWeb.Components.Page.flash flash={Phoenix.Flash.get(@flash, :info)} />
   <KamanskyWeb.Components.DataTable.table
     rows={@data}
     pagination={@pagination}
@@ -14,7 +14,7 @@
     live_action={@live_action}
     empty_message="There are no listings with bids to display."
   >
-    <:col let={listing} label="Scott Number">
+    <:col :let={listing} label="Scott Number">
       <a
         class="action-icon"
         phx-click="open"
@@ -24,16 +24,16 @@
         <%= listing.stamp.scott_number %>
       </a>
     </:col>
-    <:col let={listing} label="Inventory Key">
+    <:col :let={listing} label="Inventory Key">
       #<%= listing.stamp.inventory_key %>
     </:col>
-    <:col let={listing} label="Bids">
+    <:col :let={listing} label="Bids">
       <%= listing.ebay_listing.bid_count %>
     </:col>
-    <:col let={listing} label="Current Price">
+    <:col :let={listing} label="Current Price">
       <%= format_decimal_as_currency(listing.ebay_listing.current_bid) %>
     </:col>
-    <:col let={listing} label="Ending Date">
+    <:col :let={listing} label="Ending Date">
       <time datetime={listing.ebay_listing.end_time}><%= formatted_date(listing.ebay_listing.end_time, "%B %-d, %Y %-I:%M %p") %></time>
     </:col>
     <:col label="Actions" sort="disabled"></:col>
