--- a/lib/kamansky_web/live/listing_live/sold.html.heex
+++ b/lib/kamansky_web/live/listing_live/sold.html.heex
@@ -1,12 +1,12 @@
-<.live_component 
-  module={KamanskyWeb.Components.Header} 
+<.live_component
+  module={KamanskyWeb.Components.Header}
   id="kamansky-header"
   current_user={@current_user}
   live_action={@live_action}
   page_title={@page_title}
 />
 <main>
-  <KamanskyWeb.Components.Page.flash flash={live_flash(@flash, :info)} />
+  <KamanskyWeb.Components.Page.flash flash={Phoenix.Flash.get(@flash, :info)} />
   <KamanskyWeb.Components.DataTable.table
     rows={@data}
     pagination={@pagination}
@@ -14,7 +14,7 @@
     live_action={@live_action}
     empty_message="There are no sold listings to display."
   >
-    <:col let={listing} label="Scott Number">
+    <:col :let={listing} label="Scott Number">
       <div class="flex md:flex-row flex-col relative items-start w-full">
         <a
           class="action-icon"
@@ -29,18 +29,18 @@
         <% end %>
       </div>
     </:col>
-    <:col let={listing} label="Date of Sale">
+    <:col :let={listing} label="Date of Sale">
       <time datetime={listing.order.ordered_at}><%= formatted_date(listing.order.ordered_at) %></time>
     </:col>
-    <:col let={listing} label="Sale Price" class="text-green-600">
+    <:col :let={listing} label="Sale Price" class="text-green-600">
       <%= format_decimal_as_currency(listing.sale_price) %>
     </:col>
-    <:col let={listing} label="Stamp Cost">
+    <:col :let={listing} label="Stamp Cost">
       <span class={if Decimal.eq?(Stamp.total_cost(listing.stamp), 0), do: "", else: "text-red-600"}>
         <%= format_decimal_as_currency(Stamp.total_cost(listing.stamp)) %>
       </span>
     </:col>
-    <:col let={listing} label="Net Profit/Loss">
+    <:col :let={listing} label="Net Profit/Loss">
       <span class={color_for_currency(Listing.net_profit(listing))}>
         <%= format_decimal_as_currency(Listing.net_profit(listing)) %>
       </span>
