Upgrade to Phoenix 1.7

--- a/lib/kamansky_web/live/order_live/index.html.heex
+++ b/lib/kamansky_web/live/order_live/index.html.heex
@@ -1,5 +1,5 @@
-<.live_component 
-  module={KamanskyWeb.Components.Header} 
+<.live_component
+  module={KamanskyWeb.Components.Header}
   id="kamansky-header"
   current_user={@current_user}
   live_action={@live_action}
@@ -34,16 +34,16 @@
     live_action={@live_action}
     empty_message="There are no orders to display."
   >
-    <:col let={order} label="Order Number"><.link navigate={Routes.order_show_path(@socket, :show, order)}><%= "##{Order.order_number(order)}" %></.link></:col>
-    <:col let={order} label="Customer"><%= order.customer.name %></:col>
-    <:col let={order} label="Date"><time datetime={order.ordered_at}><%= formatted_date(order.ordered_at) %></time></:col>
-    <:col let={order} label="Total"><%= format_decimal_as_currency(Order.total_paid(order)) %></:col>
-    <:col let={order} label="Net Profit/Loss">
+    <:col :let={order} label="Order Number"><.link navigate={Routes.order_show_path(@socket, :show, order)}><%= "##{Order.order_number(order)}" %></.link></:col>
+    <:col :let={order} label="Customer"><%= order.customer.name %></:col>
+    <:col :let={order} label="Date"><time datetime={order.ordered_at}><%= formatted_date(order.ordered_at) %></time></:col>
+    <:col :let={order} label="Total"><%= format_decimal_as_currency(Order.total_paid(order)) %></:col>
+    <:col :let={order} label="Net Profit/Loss">
       <span class={if Decimal.gt?(Order.net_profit(order), 0), do: "text-green-600", else: "text-red-600"}>
         <%= format_decimal_as_currency(Order.net_profit(order)) %>
       </span>
     </:col>
-    <:col let={order} label="Actions" sort="disabled">
+    <:col :let={order} label="Actions" sort="disabled">
       <%= unless Order.completed?(order) do %>
         <a
           class="action-icon"
@@ -75,19 +75,19 @@
             title="Mark Shipped"
             values={[{"order-id", order.id}]}
           >
-            <svg 
-              xmlns="http://www.w3.org/2000/svg" 
-              class="h-5 w-5" 
-              fill="none" 
-              viewBox="0 0 24 24" 
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="h-5 w-5"
+              fill="none"
+              viewBox="0 0 24 24"
               stroke="currentColor"
             >
               <path d="M9 17a2 2 0 11-4 0 2 2 0 014 0zM19 17a2 2 0 11-4 0 2 2 0 014 0z" />
-              <path 
-                stroke-linecap="round" 
-                stroke-linejoin="round" 
-                stroke-width="2" 
-                d="M13 16V6a1 1 0 00-1-1H4a1 1 0 00-1 1v10a1 1 0 001 1h1m8-1a1 1 0 01-1 1H9m4-1V8a1 1 0 011-1h2.586a1 1 0 01.707.293l3.414 3.414a1 1 0 01.293.707V16a1 1 0 01-1 1h-1m-6-1a1 1 0 001 1h1M5 17a2 2 0 104 0m-4 0a2 2 0 114 0m6 0a2 2 0 104 0m-4 0a2 2 0 114 0" 
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M13 16V6a1 1 0 00-1-1H4a1 1 0 00-1 1v10a1 1 0 001 1h1m8-1a1 1 0 01-1 1H9m4-1V8a1 1 0 011-1h2.586a1 1 0 01.707.293l3.414 3.414a1 1 0 01.293.707V16a1 1 0 01-1 1h-1m-6-1a1 1 0 001 1h1M5 17a2 2 0 104 0m-4 0a2 2 0 114 0m6 0a2 2 0 104 0m-4 0a2 2 0 114 0"
               />
             </svg>
           </KamanskyWeb.Components.Page.link_with_confirmation>
