--- a/lib/kamansky_web/live/trend_live/sold.html.heex
+++ b/lib/kamansky_web/live/trend_live/sold.html.heex
@@ -1,5 +1,5 @@
-<.live_component 
-  module={KamanskyWeb.Components.Header} 
+<.live_component
+  module={KamanskyWeb.Components.Header}
   id="kamansky-header"
   current_user={@current_user}
   live_action={@live_action}
@@ -13,19 +13,19 @@
     live_action={@live_action}
     empty_message="There are no stamps to display."
   >
-    <:col let={stamp} label="Scott Number">
+    <:col :let={stamp} label="Scott Number">
       <%= stamp.scott_number %>
     </:col>
-    <:col let={stamp} label="Total Sold">
+    <:col :let={stamp} label="Total Sold">
       <%= stamp.total_sold %>
     </:col>
-    <:col let={stamp} label="Conversion">
+    <:col :let={stamp} label="Conversion">
       <%= round(stamp.conversion_percentage) %>%
     </:col>
-    <:col let={stamp} label="Median Sale Price">
+    <:col :let={stamp} label="Median Sale Price">
       <%= format_decimal_as_currency(stamp.median_sale_price) %>
     </:col>
-    <:col let={stamp} label="Total Profit">
+    <:col :let={stamp} label="Total Profit">
       <span class={color_for_currency(stamp.total_profit)}><%= format_decimal_as_currency(stamp.total_profit) %></span>
     </:col>
   </KamanskyWeb.Components.DataTable.table>
