--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,68 +1,68 @@
-@import "tailwindcss/base";
-@import "tailwindcss/components";
-@import "tailwindcss/utilities";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 @layer base {
   [x-cloak] { display: none !important; }
-  
+
   form {
     div.grid {
-      @apply gap-x-3;  
+      @apply gap-x-3;
     }
-    
+
     div.form-group {
       @apply mb-4;
-      
+
       div.form-input {
         @apply mt-1 relative rounded-md shadow-sm;
-        
+
         div.form-input-prepend {
           @apply absolute flex inset-y-0 items-center left-0 pl-3 pointer-events-none;
-          
+
           span {
             @apply text-gray-500 sm:text-sm;
           }
-          
+
           + input[type="text"] {
             @apply pl-7;
           }
         }
       }
-      
+
       input[type="date"], input[type="email"], input[type="number"], input[type="text"], select {
         @apply block border-gray-300 rounded-md w-full sm:text-sm focus:ring-indigo-500 focus:border-indigo-500;
       }
-      
+
       input[type="checkbox"] {
         @apply border-gray-300 h-4 rounded text-indigo-600 w-4 focus:ring-indigo-500;
       }
-      
+
       input[type="radio"] {
         @apply border-gray-300 h-4 text-indigo-600 w-4 focus:ring-indigo-500;
-        
+
         + label {
           @apply block ml-3 text-gray-700 text-sm;
         }
       }
-      
+
       > label:first-child {
         @apply block font-medium text-gray-700 text-sm;
       }
     }
-    
+
     div.required label:first-child:after {
       content: " *";
     }
   }
-  
+
   h2 {
     @apply text-3xl;
   }
-  
+
   h3 {
     @apply text-2xl;
   }
-  
+
   h5 {
     @apply text-lg;
   }
@@ -76,11 +76,11 @@
   .btn {
     @apply border border-transparent inline-block px-3 py-1.5 rounded;
   }
-  
+
   .btn-blue {
     @apply bg-blue-600 text-white;
   }
-  
+
   .btn-gray {
     @apply bg-gray-500 text-white;
   }
@@ -88,49 +88,49 @@
   .content {
     @apply container mx-auto my-3 px-6 py-6 lg:px-8 lg:py-4;
   }
-  
+
   .modal-open {
     @apply overflow-hidden;
   }
-  
+
   .kamansky-data-table {
     a.action-icon {
       @apply cursor-pointer mr-1.5 text-current;
-    
+
       i {
         @apply align-text-bottom;
         font-size: 1.0975rem;
       }
-      
+
       svg {
         @apply align-text-bottom inline-block;
       }
     }
-    
+
     a.pager-link {
       @apply bg-gray-200 border border-transparent float-left px-3 py-2;
     }
-    
+
     a.pager-link.active {
       @apply bg-blue-600 text-white;
     }
-    
+
     a.disabled {
       @apply pointer-events-none text-gray-400 hover:bg-current;
     }
-  
+
     td {
       @apply px-6 py-3 whitespace-nowrap;
     }
-    
+
     tr.even {
       @apply bg-gray-50;
-      
+
       td.sorting {
         @apply bg-gray-100;
       }
     }
-    
+
     tr.odd td.sorting {
       @apply bg-stone-50;
     }
